--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,5 @@
 jdbc.driver=oracle.jdbc.driver.OracleDriver
+#jdbc.url=jdbc:oracle:thin:@localhost:1521:orcl
 jdbc.url=jdbc:oracle:thin:@192.168.2.251:1521:orcl
 jdbc.username=goisan_xjxd
 jdbc.password=goisan_xjxd
