--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,7 +4,7 @@ jdbc.driver=oracle.jdbc.driver.OracleDriver
 #jdbc.username=goisan_xjxd
 #jdbc.password=goisan_xjxd
 jdbc.url=jdbc:oracle:thin:@192.168.2.251:1521:orcl
-jdbc.url=jdbc:oracle:thin:@192.168.2.252:1521:orcl
+#jdbc.url=jdbc:oracle:thin:@192.168.2.252:1521:orcl
 jdbc.username=goisan_xjxd
 jdbc.password=goisan_xjxd
 #jdbc.url=jdbc:oracle:thin:@192.168.2.251:1521:orcl
